--- a/app/index.html
+++ b/app/index.html
@@ -8,5 +8,7 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <h1>Hello from luong.tv
+    </h1>
   </body>
 </html>
